<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string-array name="modules">
        <item>Business</item>
        <item>Deal</item>
        <item>Classified</item>
       
    </string-array>
    <string-array name="DAYS_WEEK_HEBREW">
        <item>SUN</item>
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
    </string-array>
    <string-array name="DAYS_WEEK_GREGORIAN">
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
        <item>SUN</item>
    </string-array>
    <string name="edir_lang">en_us</string>
    <string name="no_reviews">No reviews add yet.\nAdd your voice to this conversation.</string>
    <string name="oops_something_went_wrong">Oops&#8230; something went wrong.</string>
    <string name="your_search_matched_no_results">Your search matched no results.</string>
    <string name="alert_progress_authenticating">Authenticating&#8230;</string>
    <string name="alert_title_fail">Fail</string>
    <string name="alert_message_fail">Something was wrong.\n<xliff:g id="detail">%1$s</xliff:g></string>
    <string name="app_name">Weed Finder</string>
    <string name="rating">Rating</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="distance">Distance</string>
    <string name="show_results_by_sort">Showing results by \"<xliff:g id="sort">%1$s</xliff:g>\"</string>
    <string name="setting_account">Accoount</string>
    <string name="setting_about">About</string>
    <string name="setting_about_us">About us</string>
    <string name="setting_legal_notices">Legal Notices</string>
    <string name="setting_appVersion">version <xliff:g id="versionName">%1$s</xliff:g></string>
    <string name="drawerHome">Home</string>
    <string name="drawerMap">Map</string>
    <string name="drawerBusiness">Business</string>
    <string name="drawerDeals">Deals</string>
    <string name="drawerClassifieds">Classifieds</string>
    <string name="drawerEvents">Events</string>
    <string name="drawerArticles">Articles</string>
    <string name="drawerWFGear">WF Gear</string>
    <string name="drawerNews">News</string>
    <string name="drawerWFTV">WF TV</string>
    <string name="drawerMyFavorites">My Favorites</string>
    <string name="drawerSetting">Settings</string>
    <string name="connection_error_code">Connection failure error code: %1$d</string>
    <string name="connection_error_disabled">Google Play services is disabled</string>
    <string name="connection_error_internal">An internal error occurred</string>
    <string name="connection_error_invalid">The version of Google Play services on this device is not authentic</string>
    <string name="connection_error_invalid_account">The specified account name is invalid</string>
    <string name="connection_error_license_check_failed">The app is not licensed to the user</string>
    <string name="connection_error_message">Connection failure error message: %1$s</string>
    <string name="connection_error_misconfigured">The application is misconfigured</string>
    <string name="connection_error_missing">Google Play services is missing</string>
    <string name="connection_error_needs_resolution">Additional resolution is required</string>
    <string name="connection_error_network">A network error occurred</string>
    <string name="connection_error_outdated">Google Play services is out of date</string>
    <string name="connection_error_sign_in_required">The user is not signed in</string>
    <string name="connection_error_unknown">An unknown error occurred</string>
    <string name="something_was_wrong">SOMETHING WAS WRONG!</string>
    <string name="level">Level</string>
    <string name="popular">Popular</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="you_are_logged_in_as">You are logged in as</string>
    <string name="you_are_not_logged_in">You are not logged in</string>
    <string name="login_with_your_detail_or_create_a_new_account">Login with you details or create a new account</string>
    <string name="loading">Loading&#8320;</string>
    <string name="loading_please_wait">Loading. Please wait&#8320;</string>
    <string name="tab_overview">OVERVIEW</string>
    <string name="tab_gallery">GALLERY</string>
    <string name="tab_description">DESCRIPTION</string>
    <string name="tab_reviews">REVIEWS</string>
    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Close menu</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm_deletation_selected_items">Confirm delete selected items?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="post">Post</string>
    <string name="check_ins">Check Ins</string>
    <string name="check_in">Check In</string>
    <string name="quick_comment">Quick Comment</string>
    <string name="checkin_posted">Check in posted.</string>
    <string name="posting">Posting&#8320;</string>
    <string name="add_a_review">Add a review</string>
    <string name="review_your_name">Your Name</string>
    <string name="review_your_email">Your Email</string>
    <string name="review_your_location">Your Location</string>
    <string name="review_title">Review title</string>
    <string name="review_your_comment">Your Comment</string>
    <string name="ok">OK</string>
    <string name="add_your_review">Add your review</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="Nickname">Nickname</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="publication_date">Publication Date</string>
    <string name="last_updated">Last Updated</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="sort">Sort</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="type_a_keyword">Type a keyword</string>
    <string name="where">Where?</string>
    <string name="type_a_location">Type a location</string>
    <string name="search">Search</string>
    <string name="section">Section</string>
    <string name="category">Category</string>
    <string name="category_title">Category</string>
    <string name="any">Any</string>
    <string name="event_tab_categories">Categories</string>
    <string name="event_tab_calendar">Calendar</string>
    <string name="event_tab_list">List</string>
    <string name="about_title">eDirectory.com Mobile Application</string>
    <string name="app_version">v8.1</string>
<string name="about_description">All data in this application comes direct from demodirectory.com.

eDirectory (Our platform this application is running on) is available from edirectory.com, It\'s also a good place to get more information.

If you want to know more, want to build you own directory or mobile application, then get in touch with us and see how we can help you, we\'re happy to help in any way we can.</string>
    <string name="get_in_touch">Get in Touch</string>
    <string name="about_visit_website">Visit Website</string>
    <string name="about_send_email">Send us an Email</string>
    <string name="about_call_us">Call Us</string>
    <string name="about_website_url">http://www.demodirectory.com</string>
    <string name="about_email_contact">sales@edirectory.com</string>
    <string name="about_email_contact_subject">Contact</string>
    <string name="about_telephone">1-800-630-4694</string>
    <string name="tab_deal">DEAL</string>
    <string name="event_label_started">Started:</string>
    <string name="event_date_separator">/</string>
    <string name="event_label_expires">Expires:</string>
    <string name="event_label_deals_remain">Deals left:</string>
    <string name="redeem_deal">Redeem Deal</string>
    <string name="deal_redeemed">DEAL REDEEMED</string>
    <string name="please_use_the_following_code">Please use the following code</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="event_date_from">From:</string>
    <string name="event_date">Date:</string>
    <string name="view_all">view all</string>
    <plurals name="X_reviews">
        <item quantity="zero"><xliff:g id="numRevies">%1$d</xliff:g> reviews</item>
        <item quantity="one"><xliff:g id="numRevies">%1$d</xliff:g> review</item>
        <item quantity="other"><xliff:g id="numRevies">%1$d</xliff:g> reviews</item>
    </plurals>
    <string name="name_is_required">Name is required.</string>
    <string name="last_name_is_required">Last name is required.</string>
    <string name="email_is_required">Email is required.</string>
    <string name="nickname_is_required">Nickname is required.</string>
    <string name="enter_a_valid_email">Enter a valid email</string>
    <string name="creating_account">Creating account&#8320;</string>
    <string name="confirm_password_does_not_match">Confirm password does not match.</string>
    <string name="minimum_of_4_chars">Minimum of 4 characters.</string>
    <string name="password_is_required">Password is required.</string>
    <string name="no_results_to_be_shown">No results to be shown.</string>
    <string name="email_should_be_filled">Email should be filled.</string>
    <string name="password_should_be_filled">Password should be filled.</string>
    <string name="you_are_not_connected_on_facebook">You are not connected on facebook.</string>
    <string name="categories">Category</string>
    <string name="published_at_X_by">Published at %tD by</string>
    <string name="stars">stars</string>
    <string name="call">Call</string>
    <string name="send_email">Send Email</string>
    <string name="visit_webpage">Visit Webpage</string>
    <string name="check_in_here">Check in here</string>
    <string name="web_view_menu">Menu</string>
    <string name="contact">Contact</string>
    <string name="redeeming_deal">Redeeming Deal&#8320;</string>
    <string name="redeem">Redeem</string>
    <string name="are_you_sure_you_want_redeem_this_deal">Are you sure you want redeem this Deal?</string>
    <string name="no">No</string>
    <string name="name_is_empty">Name is empty.</string>
    <string name="email_is_empty">Email is empty.</string>
    <string name="location_is_empty">Location is empty.</string>
    <string name="title_is_empty">Title is empty.</string>
    <string name="comment_is_empty">Comment is empty.</string>
    <string name="rating_must_be_at_least_1">Rating must be at least 1</string>
    <string name="review_posted">Review posted!</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="login_with_your_detail">Login with your details</string>
    <string name="log_in">Log In</string>
    <string name="or">OR</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_up">Sign Up</string>
    <string name="call_business">Call business</string>
    <string name="get_directions">Get Directions</string>
    <string name="reviews">Reviews</string>
    <string name="send_by_email">Send by email</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="hairline"> - </string>
    <string name="by">By</string>
    <string name="loadin_more_results"><![CDATA[Loading more results&#8320;]]></string>
    <string name="price">Price:</string>
    <string name="no_app_to_handle_this_operation">There is no app registered to handle this operation type.</string>
</resources>