<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    style="@style/AppBackground">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacingMedium">

            <TextView
                style="@style/categoryResultTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_are_you_looking_for"
                android:labelFor="@+id/keyword" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:id="@+id/keyword"
                android:hint="@string/type_a_keyword"
                android:inputType="textCapSentences"
                android:lines="1"
                android:textSize="16sp"
                android:background="@drawable/button_signup_style"
                android:paddingLeft="5dp"
                android:textColor="@color/gray_weedfinder"
                />

            <TextView
                style="@style/categoryResultTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/where"
                android:layout_marginTop="@dimen/spacingLarge"
                android:labelFor="@+id/location" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:id="@+id/location"
                android:hint="@string/type_a_location"
                android:lines="1"
                android:inputType="textCapSentences"
                android:textSize="16sp"
                android:background="@drawable/button_signup_style"
                android:paddingLeft="5dp"
                android:textColor="@color/gray_weedfinder"/>
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:id="@android:id/list"
            android:layout_weight="1"
            android:dividerHeight="1dp"
            android:divider="@color/gray_weedfinder"/>

        <Button
            style="@style/blueButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:onClick="onSearch"
            android:id="@+id/search_button"
            android:background="@color/green_weedfinder"/>

    </LinearLayout>
</ScrollView>